--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link"></a>My Work</li>
-                    <li class="nav__item"><a href="#" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Contact Me</a></li>
+                    <li class="nav__item"><a href="home" class="nav__link">Home</a></li>                    
+                    <li class="nav__item"><a href="services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="blog" class="nav__link">Blog</a></li>
+                    <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="services" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="contact" class="nav__link">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,7 +37,124 @@
                 Hi, I'm <strong>Jamil Uddin</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">Front-End Developer</p>
+            <img src="images/jamil-01.jpg" alt="a picture of Jamil Smiling">
+
         </section>
+        <!-- Services-->
+        <section class="my-services" id="services">
+            <h2 class="section__title section_title--services">What I do</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Web Development</h3>
+                    <p>Need help, contact me</p>
+                </div> <!-- end service-->
+                <div class="service">
+                    <h3>IT Support && Networking</h3>
+                    <p>Need help, contact me</p>
+                </div> <!-- end service-->
+                <div class="service">
+                    <h3>Azure Cloud Services</h3>
+                    <p>Need help, contact me</p>
+                </div> <!-- end service-->
+            </div> <!-- end services-->
+            <a href="work" class="btn">My Work</a>
+        </section>
+
+        <!--About me-->
+
+        <section class="about-me" id="about">
+            <h2 class="section__title section__title--about">Who I Am</h2>
+            <p class="section__subtitle section__subtitle--about"></p>
+
+            <div class="about-me__body">
+                <p></p>
+                <p></p>
+            </div>
+            <img src="images/jamil-02.jpg" alt="Jamil with work">
+
+        </section>
+
+        <!--My Work-->
+        <section class="my-work" id="work">
+            <h2 class="section__title">My Work</h2>
+            <p class="section__subtitle"></p>
+
+            <div class="portfolio">
+                <!-- Portfolio item 01 -->
+                <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-01.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 02 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-02.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 03 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-03.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 04 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-04.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 05 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-05.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 06 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-06.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 07 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-07.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 08 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-08.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 09 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-09.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+                 <!-- Portfolio item 10 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-10.jpg" alt="" class="portfolio__img">
+
+                </a>
+
+
+            </div>
+        </section>
+
+        <!--Footer part-->
+        <footer>
+            <a href="mailto:uddin.jamil.md@gmail.com" class="footer__link">uddin.jamil.md@gmail.com</a>
+            <ul class="social-list">
+                <li class="social-list_item"><a class="social-list__link" href="https://codepen.io">a</a></li>
+                <li class="social-list_item"><a class="social-list__link" href="https://linkedin.com/">b</a></li>
+                <li class="social-list_item"><a class="social-list__link" href="https://twitter.com">c</a></li>
+                <li class="social-list_item"><a class="social-list__link" href="https://github.com">d</a></li>
+            </ul>
+        </footer>
+
 
     </body>
 </html>
