some change html

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
             </div>
         </section>
+        <!--Ens work part-->
 
         <!--Footer part-->
         <footer>
@@ -154,6 +155,7 @@
                 <li class="social-list_item"><a class="social-list__link" href="https://github.com">d</a></li>
             </ul>
         </footer>
+         <!-- end Footer part-->
 
 
     </body>
