--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             </button>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="home" class="nav__link">Home</a></li>                    
-                    <li class="nav__item"><a href="services" class="nav__link">My Services</a></li>
-                    <li class="nav__item"><a href="blog" class="nav__link">Blog</a></li>
-                    <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-                    <li class="nav__item"><a href="services" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="contact" class="nav__link">Contact Me</a></li>
+                    <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>                    
+                    <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+                    <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -57,7 +57,7 @@
                     <p>Need help, contact me</p>
                 </div> <!-- end service-->
             </div> <!-- end services-->
-            <a href="work" class="btn">My Work</a>
+            <a href="#work" class="btn">My Work</a>
         </section>
 
         <!--About me-->
