Done style file with some change html file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous">
+
+        <!-- Update these with your own fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|
+        Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="css/style.css">
+
     </head>
 
     <body>
@@ -36,7 +43,7 @@
             <h1 class="section__title section__title--intro">
                 Hi, I'm <strong>Jamil Uddin</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Front-End Developer</p>
+            <p class="section__subtitle section__subtitle--intro">Front-End Developer / IT Support</p>
             <img src="images/jamil-01.jpg" alt="a picture of Jamil Smiling">
 
         </section>
@@ -54,6 +61,10 @@
                 </div> <!-- end service-->
                 <div class="service">
                     <h3>Azure Cloud Services</h3>
+                    <p>Need help, contact me</p>
+                </div> <!-- end service-->
+                <div class="service">
+                    <h3>Freelancer</h3>
                     <p>Need help, contact me</p>
                 </div> <!-- end service-->
             </div> <!-- end services-->
