Done  Intro section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h1 class="section__title section__title--intro">
                 Hi, I'm <strong>Jamil Uddin</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Front-End Developer / IT Support</p>
-            <img src="images/jamil-01.jpg" alt="a picture of Jamil Smiling">
+            <p class="section__subtitle section__subtitle--intro">Junior Developer / IT Support</p>
+            <img src="images/jamil-01.jpg" alt="a picture of Jamil Smiling" class="intro__img">
 
         </section>
         <!-- Services-->
