Done style services section with some change html file

--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
         </section>
         <!-- Services-->
         <section class="my-services" id="services">
-            <h2 class="section__title section_title--services">What I do</h2>
+            <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
                 <div class="service">
                     <h3>Web Development</h3>
-                    <p>Need help, contact me</p>
+                    <p>Need help, contact me: HTML5, CSS3 & JavaScript; C#, .NET, ASP.NET</p>
                 </div> <!-- end service-->
                 <div class="service">
-                    <h3>IT Support && Networking</h3>
-                    <p>Need help, contact me</p>
+                    <h3>IT Support & Networking</h3>
+                    <p>Need help, contact me: Windows server 2016, DNS, DHCP, 
+                        Active Directory, Group Policy, Hyper-v, TCP / IP, Cisco router & Switch, Firewall</p>
                 </div> <!-- end service-->
                 <div class="service">
                     <h3>Azure Cloud Services</h3>
@@ -65,7 +66,8 @@
                 </div> <!-- end service-->
                 <div class="service">
                     <h3>Freelancer</h3>
-                    <p>Need help, contact me</p>
+                    <p>Need help, contact me: Surface Hub: installation, configuration, 
+                        troubleshooting, Test and connect with active directory(Authentication)</p>
                 </div> <!-- end service-->
             </div> <!-- end services-->
             <a href="#work" class="btn">My Work</a>
