Done  style for about section

--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
             <p class="section__subtitle section__subtitle--about">Developer, IT Support & Cloud Engineer</p>
 
             <div class="about-me__body">
-                <p></p>
-                <p></p>
+                <p>I'm Jamil Uddin from Bangladesh, now live in Stockholm. I read books
+                    and play badminton in my spare time.</p>
+                <p>I'm an active member of the NRB
+                    Cultural Association in Huddinge.</p>
             </div>
-            <img src="images/jamil-02.jpg" alt="Jamil with work">
+            <img src="images/jamil-02.jpg" alt="Jamil with work" class="about-me__img">
 
         </section>
 
