--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I Am</h2>
-            <p class="section__subtitle section__subtitle--about">Developer, IT Support & Cloud Engineer</p>
+            <p class="section__subtitle section__subtitle--about">Developer, IT Technician & Cloud Engineer</p>
 
             <div class="about-me__body">
                 <p>I'm Jamil Uddin from Bangladesh, now live in Stockholm. I read books
@@ -91,83 +91,100 @@
 
         <!--My Work-->
         <section class="my-work" id="work">
-            <h2 class="section__title">My Work</h2>
-            <p class="section__subtitle"></p>
+            <h2 class="section__title section__title--work">My Work</h2>
+            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
 
-            <div class="portfolio">
+            <div class="portfolio"> 
                 <!-- Portfolio item 01 -->
                 <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-01.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-01.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 02 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-02.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-02.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 03 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-03.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-03.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 04 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-04.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-04.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 05 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-05.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-05.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 06 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-06.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-06.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 07 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-07.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-07.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 08 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-08.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-08.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 09 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-09.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-09.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 10 -->
                  <a href="#" class="portfolio__item">
-                    <img src="images/portfolio-10.jpg" alt="" class="portfolio__img">
-
+                    <img src="images/portfolio-10.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
+                 <!-- Portfolio item 10 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-11.jpg" alt="" class="portfolio__img" width="325" height="183">
+                </a>
+
+                 <!-- Portfolio item 10 -->
+                 <a href="#" class="portfolio__item">
+                    <img src="images/portfolio-12.jpg" alt="" class="portfolio__img" width="325" height="183">
+                </a>
 
             </div>
         </section>
         <!--Ens work part-->
 
         <!--Footer part-->
-        <footer>
+        <footer class="footer">
             <a href="mailto:uddin.jamil.md@gmail.com" class="footer__link">uddin.jamil.md@gmail.com</a>
+            <br>
+            <a href="tel:+46 (0) 70 778 85 58" class="footer__link">+46 (0) 70 778 85 58</a>
             <ul class="social-list">
-                <li class="social-list_item"><a class="social-list__link" href="https://codepen.io">a</a></li>
-                <li class="social-list_item"><a class="social-list__link" href="https://linkedin.com/">b</a></li>
-                <li class="social-list_item"><a class="social-list__link" href="https://twitter.com">c</a></li>
-                <li class="social-list_item"><a class="social-list__link" href="https://github.com">d</a></li>
+                <li class="social-list_item">
+                    <a class="social-list__link" href="https://codepen.io">
+                        <i class="fab fa-codepen"></i>
+                    </a>
+                </li>
+                <li class="social-list_item">
+                    <a class="social-list__link" href="https://linkedin.com/">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </li>
+                <li class="social-list_item">
+                    <a class="social-list__link" href="https://twitter.com">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li class="social-list_item">
+                    <a class="social-list__link" href="https://github.com">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
          <!-- end Footer part-->
