Navbar working  properly (scroll-behavior)

--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
             </ul>
         </footer>
          <!-- end Footer part-->
+    
+         <!--Start Script part-->
+
+         <Script src="js/index.js"></Script>
+
+         <!--End Script part-->
 
 
     </body>
