--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             <p class="section__subtitle section__subtitle--intro">Junior Developer / IT Support</p>
             <img src="images/jamil-01.jpg" alt="a picture of Jamil Smiling" class="intro__img">
 
+            <a href="#about" class="btn">About Me</a>
+
         </section>
+        <!-- End Introduction -->
+
         <!-- Services-->
         <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
@@ -157,7 +161,49 @@
 
             </div>
         </section>
-        <!--Ens work part-->
+        <!--End work part-->
+
+        <!--Start Contact part-->
+
+        <section class="contact-me" id="contact">
+            <h2>GET IN TOUCH</h2>
+            <form id="contactForm">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="subject" name="name" placeholder="Subject" required data-error="Please enter your Subject">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                        <div class="submit-button text-left bg-light">
+                            <button class="btn hvr-hover bg-primary" id="submit" type="submit" >Send Message</button>
+                            <div id="msgSubmit" class="h3 text-center hidden"></div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+
+        </section>           
+
+        <!--End Contact part-->
 
         <!--Footer part-->
         <footer class="footer">
