Need to change contact  form

--- a/index.html
+++ b/index.html
@@ -164,43 +164,50 @@
         <!--End work part-->
 
         <!--Start Contact part-->
-
         <section class="contact-me" id="contact">
-            <h2>GET IN TOUCH</h2>
-            <form id="contactForm">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
-                            <div class="help-block with-errors"></div>
+            <h2 class="section__title section__title--contact">Contact Me</h2>
+            <div class="contact">
+                <div class="contacts">
+                    <h3 class="section__title section__title--contact">GET IN TOUCH</h3>
+                    <form id="contactForm">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
+                                <div class="help-block with-errors"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
-                            <div class="help-block with-errors"></div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+                                <div class="help-block with-errors"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="subject" name="name" placeholder="Subject" required data-error="Please enter your Subject">
-                            <div class="help-block with-errors"></div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="subject" name="name" placeholder="Subject" required data-error="Please enter your Subject">
+                                <div class="help-block with-errors"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="form-group">
-                            <textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
-                            <div class="help-block with-errors"></div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
+                                <div class="help-block with-errors"></div>
+                            </div>    
                         </div>
                         <div class="submit-button text-left bg-light">
                             <button class="btn hvr-hover bg-primary" id="submit" type="submit" >Send Message</button>
                             <div id="msgSubmit" class="h3 text-center hidden"></div>
                             <div class="clearfix"></div>
-                        </div>
-                    </div>
+                         </div>
+                    </form>
                 </div>
-            </form>
-
+                <div class="contacts">
+                    <h3 class="section__title section__title--contact">CONTACT</h3>
+                    <p><i class="fas fa-map-marker-alt"></i> Mogårdsvägen 25 <br>143 43 Vårby, Stockholm<br> Sweden </p>
+                    <p><i class="fas fa-phone-square"></i><a href="tel:+46(0)70 778 85 58">+46(0)70 778 85 58</a></p>
+                    <p><i class="fas fa-envelope"></i><a href="uddin.jamil.md@gmail.com">uddin.jamil.md@gmail.com</a></p>
+                </div>
+            </div>      
         </section>           
 
         <!--End Contact part-->
