--- a/index.html
+++ b/index.html
@@ -85,11 +85,28 @@
 
             <div class="about-me__body">
                 <p>I'm Jamil Uddin from Bangladesh, now live in Stockholm. I read books
-                    and play badminton in my spare time.</p>
-                <p>I'm an active member of the NRB
+                    and play badminton in my spare time. I'm an active member of the NRB
                     Cultural Association in Huddinge.</p>
             </div>
             <img src="images/jamil-02.jpg" alt="Jamil with work" class="about-me__img">
+            <div class="services">
+                <div class="service">
+                    <h3>Programming Skills</h3>
+                    <p>HTML5, CSS3 & JavaScript; C#, jQuery</p>
+                </div> <!-- end service-->
+            </div> 
+            <div class="services">
+                <div class="service">
+                    <h3>Technical Skills</h3>
+                    <p>HTML5, CSS3 & JavaScript; C#, jQuery</p>
+                </div> <!-- end service-->
+            </div> 
+            <div class="services">
+                <div class="service">
+                    <h3>Practical Skills</h3>
+                    <p> HTML5, CSS3 & JavaScript; C#, jQuery</p>
+                </div> <!-- end service-->
+            </div>    
 
         </section>
 
@@ -168,41 +185,7 @@
             <h2 class="section__title section__title--contact">Contact Me</h2>
             <div class="contact">
                 <div class="contacts">
-                    <h3 class="section__title section__title--contact">GET IN TOUCH</h3>
-                    <form id="contactForm">
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name" required data-error="Please enter your name">
-                                <div class="help-block with-errors"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
-                                <div class="help-block with-errors"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="subject" name="name" placeholder="Subject" required data-error="Please enter your Subject">
-                                <div class="help-block with-errors"></div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
-                                <div class="help-block with-errors"></div>
-                            </div>    
-                        </div>
-                        <div class="submit-button text-left bg-light">
-                            <button class="btn hvr-hover bg-primary" id="submit" type="submit" >Send Message</button>
-                            <div id="msgSubmit" class="h3 text-center hidden"></div>
-                            <div class="clearfix"></div>
-                         </div>
-                    </form>
-                </div>
-                <div class="contacts">
-                    <h3 class="section__title section__title--contact">CONTACT</h3>
+                    <h3 class="section__title section__title--contact">Contact Details</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Mogårdsvägen 25 <br>143 43 Vårby, Stockholm<br> Sweden </p>
                     <p><i class="fas fa-phone-square"></i><a href="tel:+46(0)70 778 85 58">+46(0)70 778 85 58</a></p>
                     <p><i class="fas fa-envelope"></i><a href="uddin.jamil.md@gmail.com">uddin.jamil.md@gmail.com</a></p>
