--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <div class="portfolio"> 
                 <!-- Portfolio item 01 -->
-                <a href="#" class="portfolio__item">
+                <a href="portfolio-item.html" class="portfolio__item">
                     <img src="images/portfolio-01.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
