Final  demo for Portfolio Project done;  need to change text for correect information and descriptions

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -51,7 +51,7 @@
             <p> My project: Aims to create conditions for development knowledge and skills in .net programming and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
 
             </p>
-            <img src="images/portfolio-details.jpg" alt="">
+            <img src="images/portfolio-01.jpg" alt="">
             <p>Aims to create conditions for development knowledge and skills in .net programming and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
 
             </p>
