--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -41,9 +41,9 @@
         
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                The title <strong>of my project</strong>
+                Title: <strong>C# Project</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
+            <p class="section__subtitle section__subtitle--intro">A short Description</p>
             <img src="images/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         <div class="portfolio-item-individual">
