--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -47,11 +47,14 @@
             <img src="images/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         <div class="portfolio-item-individual">
-            <p> My project: Aims to create conditions for development knowledge and skills in .net programming and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
+            <p> My project: Aims to create development knowledge and skills in .net framework
+                and to develop IT systems, applications or parts of systems. To cover system development, 
+                frontend development, Azure development in dot NET.
 
             </p>
             <img src="images/portfolio-01.jpg" alt="">
-            <p>Aims to create conditions for development knowledge and skills in .net programming and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
+            <p>Aims to create conditions for development knowledge and skills in .net programming 
+                and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
 
             </p>
             <p>project:  Aims to create conditions for development knowledge and skills in .net programming and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
