Linkedin page connect; contact page

--- a/index.html
+++ b/index.html
@@ -224,13 +224,17 @@
         <section class="contact-me" id="contact">
             <h2 class="section__title section__title--contact">Contact Me</h2>
             <div class="contact">
+                <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="md-jamil-uddin"><a class="LI-simple-link"
+                     href='https://se.linkedin.com/in/md-jamil-uddin?trk=profile-badge'>MD JAMIL UDDIN</a>
+                </div>
                 <div class="contacts">
                     <h3 class="section__title section__title--contact">Contact Details</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Mogårdsvägen 25 <br>143 43 Vårby, Stockholm<br> Sweden </p>
                     <p><i class="fas fa-phone-square"></i><a href="tel:+46(0)70 778 85 58">+46(0)70 778 85 58</a></p>
                     <p><i class="fas fa-envelope"></i><a href="uddin.jamil.md@gmail.com">uddin.jamil.md@gmail.com</a></p>
                 </div>
-            </div>      
+            </div>   
+               
         </section>           
 
         <!--End Contact part-->
@@ -268,6 +272,7 @@
          <!--Start Script part-->
 
          <Script src="js/index.js"></Script>
+         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
          <!--End Script part-->
 
