SOME CHANGE PROJECT WORK

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </a>
 
                  <!-- Portfolio item 02 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/HTML-and-CSS" class="portfolio__item">
                     <img src="images/portfolio-02.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
@@ -224,9 +224,11 @@
         <section class="contact-me" id="contact">
             <h2 class="section__title section__title--contact">Contact Me</h2>
             <div class="contact">
+                
                 <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="md-jamil-uddin"><a class="LI-simple-link"
                      href='https://se.linkedin.com/in/md-jamil-uddin?trk=profile-badge'>MD JAMIL UDDIN</a>
                 </div>
+                
                 <div class="contacts">
                     <h3 class="section__title section__title--contact">Contact Details</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Mogårdsvägen 25 <br>143 43 Vårby, Stockholm<br> Sweden </p>
