--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -41,18 +41,20 @@
         
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Title: <strong>C# Project</strong>
+                <strong>Academic Project</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">A short Description</p>
+            <p class="section__subtitle section__subtitle--intro">A short List</p>
             <img src="images/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         <div class="portfolio-item-individual">
+            <h3>Objective:</h3>
             <p> My project: Aims to create development knowledge and skills in .net framework
                 and to develop IT systems, applications or parts of systems. To cover system development, 
                 frontend development, Azure development in dot NET.
 
             </p>
-            <img src="images/portfolio-01.jpg" alt="">
+            <img src="images/portfolio-01.jpg" alt="" style="margin: auto;">
+            <h3>List of the Prijects:</h3>
             <p>Aims to create conditions for development knowledge and skills in .net programming 
                 and to develop IT systems, applications or parts of systems. To cover system development, frontend development, Azure development in dot NET.
 
