--- a/index.html
+++ b/index.html
@@ -64,23 +64,41 @@
         <section class="my-services" id="services">
             <h2 class="section__title section__title--services">What I do</h2>
             <div class="services">
+                <!--
                 <div class="service">
                     <h3>Web Development</h3>
-                    <p>Need help, contact me: HTML5, CSS3 & JavaScript; C#, .NET, ASP.NET</p>
-                </div> <!-- end service-->
+                    <p>Need help, Contact me: 
+                        <li>Personal website</li>
+                        <li>Business website</li>
+                        <li>Academic Website</li>
+                    </p>
+                </div> <!-- end service
+                    -->
                 <div class="service">
-                    <h3>IT Support & Networking</h3>
-                    <p>Need help, contact me: Windows server 2016, DNS, DHCP, 
-                        Active Directory, Group Policy, Hyper-v, TCP / IP, Cisco router & Switch, Firewall</p>
+                    <h3>IT Support & Web Development</h3>
+                    <p>Need help, Contact me: 
+                        <li>Configuration &
+                            troubleshooting: Windows server 2016.</li>
+                        <li>Configuration & 
+                                troubleshooting: DNS, DHCP, TCP / IP, Firewall.</li> 
+                        <li>Design & develop: Personal, Business, and Academic website</li>
+                    </p>
                 </div> <!-- end service-->
+                 <!--
                 <div class="service">
                     <h3>Azure Cloud Services</h3>
                     <p>Need help, contact me</p>
-                </div> <!-- end service-->
+                </div> 
+                -->
+                <!-- end service-->
                 <div class="service">
                     <h3>Freelancer</h3>
-                    <p>Need help, contact me: Surface Hub: installation, configuration, 
-                        troubleshooting, Test and connect with active directory(Authentication)</p>
+                    <p>Need help, Contact me: 
+                        <li>Surface Hub: installation, configuration, 
+                            troubleshooting, Test and connect with active directory(Authentication)</li>
+                            <li>Technical support such as PC/laptop installation, troubleshooting,
+                                 and maintenance, software install/update/ troubleshooting, printer maintenance.</li>
+                    </p>
                 </div> <!-- end service-->
             </div> <!-- end services-->
             <a href="#work" class="btn">My Work</a>
