Change my work part

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -85,7 +85,7 @@
                 </a>
             </li>
             <li class="social-list_item">
-                <a class="social-list__link" href="https://linkedin.com/">
+                <a class="social-list__link" href="https://www.linkedin.com/in/md-jamil-uddin/">
                     <i class="fab fa-linkedin"></i>
                 </a>
             </li>
@@ -95,7 +95,7 @@
                 </a>
             </li>
             <li class="social-list_item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/Jamil-NE20">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
