--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <!--My Work-->
         <section class="my-work" id="work">
             <h2 class="section__title section__title--work">My Work</h2>
-            <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+            <p class="section__subtitle section__subtitle--work">My range of work & study materials</p>
 
             <div class="portfolio"> 
                 <!-- Portfolio item 01 -->
@@ -185,22 +185,22 @@
                 </a>
 
                  <!-- Portfolio item 03 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/MSSQL-Server" class="portfolio__item">
                     <img src="images/portfolio-03.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 04 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/AzureLab" class="portfolio__item">
                     <img src="images/portfolio-04.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 05 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/API-Lab" class="portfolio__item">
                     <img src="images/portfolio-05.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 06 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/Project-ShopTastic" class="portfolio__item">
                     <img src="images/portfolio-06.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
@@ -210,17 +210,17 @@
                 </a>
 
                  <!-- Portfolio item 08 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://github.com/Jamil-NE20/Jamil-Portfolio" class="portfolio__item">
                     <img src="images/portfolio-08.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 09 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://developer.mozilla.org/en-US/docs/Learn/Front-end_web_developer" class="portfolio__item">
                     <img src="images/portfolio-09.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
                  <!-- Portfolio item 10 -->
-                 <a href="#" class="portfolio__item">
+                 <a href="https://www.tutorialsteacher.com/mvc/asp.net-mvc-tutorials" class="portfolio__item">
                     <img src="images/portfolio-10.jpg" alt="" class="portfolio__img" width="325" height="183">
                 </a>
 
@@ -271,7 +271,7 @@
                     </a>
                 </li>
                 <li class="social-list_item">
-                    <a class="social-list__link" href="https://linkedin.com/">
+                    <a class="social-list__link" href="https://www.linkedin.com/in/md-jamil-uddin/">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
@@ -281,7 +281,7 @@
                     </a>
                 </li>
                 <li class="social-list_item">
-                    <a class="social-list__link" href="https://github.com">
+                    <a class="social-list__link" href="https://github.com/Jamil-NE20">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
