--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -53,7 +53,8 @@
                  applications, the security of the IT environment in real-life systems.
             </p>
             <img src="images/portfolio-01.jpg" alt="" style="margin: auto;">
-            <h3>List of the Prijects:</h3>
+            <h3>List of the Projects:</h3>
+            <p>
             <li>Secure Data Aggregation in Wireless Sensor Networks (Master thesis, KTH)</li>
             <li>Wireless Local Area Network (WLAN) Threat: Interceptions (IT Security, KTH)</li>
             <li>“Secure Sockets Layer Protocol”- Security in Mobile and Wireless Networks project </li>
@@ -67,6 +68,7 @@
             <li>“Develop a Business Strategy” – a project work that based on the management system 
                 which is focusing the propose Vehicle Company Euro Stockholm (EuroS).</li>
             <li> “Introduction to Data Mining Using Clustering Method” (Bachelor Thesis)</li>
+            </p>
             
 
         </div>
